[tool.poetry]
name = "nergal"
version = "0.1.0"
description = "testing the click library"
authors = ["alexiskaldany <alexiskaldany@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
pandas = "^1.4.2"
yfinance = "^0.1.70"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

packages = [
    { include = "scripts" }
]

[tool.poetry.scripts]
single_ticker = "nergal.__main__:single"
